--- a/Spring-Project/src/main/resources/templates/html/signin.html
+++ b/Spring-Project/src/main/resources/templates/html/signin.html
@@ -38,10 +38,16 @@
             <h2>Sign In</h2>
             <form>
                 <div class="input-group">
+                    <div class="mail-icon">
+                        <i class="mail-icon"></i><img src="../images/mail_icon.png"/>
+                    </div>
                     <i class="fas fa-envelope"></i>
                     <input type="email" placeholder="email" required>
                 </div>
                 <div class="input-group">
+                    <div class="password-icon">
+                        <i class="password-icon"></i><img src="../images/password_icon.png"/>
+                    </div>
                     <i class="fas fa-lock"></i>
                     <input type="password" placeholder="password" required>
                 </div>
