--- a/Spring-Project/src/main/resources/templates/html/signup.html
+++ b/Spring-Project/src/main/resources/templates/html/signup.html
@@ -27,9 +27,9 @@
 
 <main>
     <a href="#" class="go-back">Go To Back</a>
-    <div class="login_icon"><img src="../images/login_icon.png"/>
+    <div class="login_icon"><img src="../images/login_icon.png"/></div>
 
-        <div class="signup-container">
+    <div class="signup-container">
         <h2>Sign Up</h2>
         <form>
             <div class="input-group">
@@ -52,7 +52,8 @@
             </div>
             <div class="input-group">
                 <div class="icon-wrapper">
-                    <img src="../images/password_icon.png"/></div>
+                    <img src="../images/password_icon.png"/>
+                </div>
                 <input type="password" placeholder="Input your [password confirm]" required>
             </div>
             <div class="input-group">
