--- a/Spring-Project/src/main/resources/templates/viewPost.html
+++ b/Spring-Project/src/main/resources/templates/viewPost.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/viewPost.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" th:href="@{/css/viewPost.css}">
+    <link rel="stylesheet" th:href="@{/css/header.css}">
+    <link rel="stylesheet" th:href="@{/css/footer.css}">
     <title>Your App? My App! YAMA - 게시글 작성</title>
 </head>
 <body>
 <header>
     <div class="header-container">
         <div class="logo">
-            <img src="../images/yama_logo.png" alt="YAMA Logo">
+            <img src="/images/yama_logo.png" alt="YAMA Logo">
         </div>
         <nav>
             <ul>
@@ -29,20 +29,20 @@
     <section class="post-container">
         <h1>Title입니다</h1>
         <div class="icon">
-            <img class="icon-img" src="../images/img-place-holder.png">
+            <img class="icon-img" src="/images/img-place-holder.png">
             <button class="icon-img-add-button">Edit Post</button>
         </div>
         <div class="user-information">
             <div>
                 <div class="user">
-                    <img class="nickname-img" src="../images/nickname-icon.png">
+                    <img class="nickname-img" src="/images/nickname-icon.png">
                     <div class="nickname">Nickname</div>
                 </div>
                 <div>날짜 출력dsafdsafdsafdsafdasfdasfdasfasdfdasfdsafdsafdasfdsaf</div>
             </div>
 
             <div class="download">
-                <img class="download-img" src="../images/link.png">
+                <img class="download-img" src="/images/link.png">
                 <a href="www.naver.com">dfafsdafdasfdsafdasdfdasdafadsfasfdasfdsafdasfdsafdsfasfsdafdsafasfasfdasf</a>
             </div>
 
@@ -81,7 +81,7 @@
 <footer>
     <div class="footer-container">
         <div class="footer-logo">
-            <img src="../images/yama_logo.png" alt="YAMA Logo">
+            <img src="/images/yama_logo.png" alt="YAMA Logo">
         </div>
         <div class="footer-info">
             <div class="footer-contact">
