--- a/Spring-Project/src/main/resources/templates/admin.html
+++ b/Spring-Project/src/main/resources/templates/admin.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin</title>
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/admin.css">
+    <link rel="stylesheet" th:href="@{/css/footer.css}">
+    <link rel="stylesheet" th:href="@{/css/header.css}">
+    <link rel="stylesheet" th:href="@{/css/admin.css}">
 </head>
 <body>
 <!-- footer가 아래에 안붙어서 만든 div -->
@@ -13,7 +13,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="../images/yama_logo.png" alt="YAMA Logo">
+                <img src="/images/yama_logo.png" alt="YAMA Logo">
             </div>
             <nav>
                 <ul>
@@ -64,7 +64,7 @@
     <footer>
         <div class="footer-container">
             <div class="footer-logo">
-                <img src="../images/yama_logo.png" alt="YAMA Logo">
+                <img src="/images/yama_logo.png" alt="YAMA Logo">
             </div>
             <div class="footer-info">
                 <div class="footer-contact">
