--- a/Spring-Project/src/main/resources/templates/categoryPost.html
+++ b/Spring-Project/src/main/resources/templates/categoryPost.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>CategoryPost</title>
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/categoryPost.css">
+    <link rel="stylesheet" th:href="@{/css/footer.css}">
+    <link rel="stylesheet" th:href="@{/css/header.css}">
+    <link rel="stylesheet" th:href="@{/css/categoryPost.css}">
 </head>
 <body>
 <!-- footer가 아래에 안붙어서 만든 div -->
@@ -13,7 +13,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="../images/yama_logo.png" alt="YAMA Logo">
+                <img src="/images/yama_logo.png" alt="YAMA Logo">
             </div>
             <nav>
                 <ul>
@@ -56,31 +56,31 @@
             </thead>
             <tbody>
             <tr>
-                <td><img src="../images/cat-icon.png" alt="Cat Icon"></td>
+                <td><img src="/images/cat-icon.png" alt="Cat Icon"></td>
                 <td>공지사항</td>
                 <td>관리자</td>
                 <td>2024-07-24</td>
             </tr>
             <tr>
-                <td><img src="../images/cat-icon.png" alt="Cat Icon"></td>
+                <td><img src="/images/cat-icon.png" alt="Cat Icon"></td>
                 <td>공지사항</td>
                 <td>관리자</td>
                 <td>2024-07-20</td>
             </tr>
             <tr>
-                <td><img src="../images/cat-icon.png" alt="Cat Icon"></td>
+                <td><img src="/images/cat-icon.png" alt="Cat Icon"></td>
                 <td>노트 앱 소개</td>
                 <td>최의현</td>
                 <td>2024-07-23</td>
             </tr>
             <tr>
-                <td><img src="../images/cat-icon.png" alt="Cat Icon"></td>
+                <td><img src="/images/cat-icon.png" alt="Cat Icon"></td>
                 <td>그림 앱 소개</td>
                 <td>의현최</td>
                 <td>2024-07-21</td>
             </tr>
             <tr>
-                <td><img src="../images/cat-icon.png" alt="Cat Icon"></td>
+                <td><img src="/images/cat-icon.png" alt="Cat Icon"></td>
                 <td>개발 앱 소개</td>
                 <td>스프링</td>
                 <td>2024-07-22</td>
@@ -94,7 +94,7 @@
     <footer>
         <div class="footer-container">
             <div class="footer-logo">
-                <img src="../images/yama_logo.png" alt="YAMA Logo">
+                <img src="/images/yama_logo.png" alt="YAMA Logo">
             </div>
             <div class="footer-info">
                 <div class="footer-contact">
