--- a/Spring-Project/src/main/resources/templates/main.html
+++ b/Spring-Project/src/main/resources/templates/main.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YAMA - Your App? My App!</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
+    <link rel="stylesheet" th:href="@{/css/footer.css}">
+    <link rel="stylesheet" th:href="@{/css/header.css}">
 </head>
 <body>
 <header>
     <div class="header-container">
         <div class="logo">
-            <img src="../images/yama_logo.png" alt="YAMA Logo">
+            <img src="/images/yama_logo.png" alt="YAMA Logo">
         </div>
         <nav>
             <ul>
@@ -30,7 +30,7 @@
             <h2 class="top">Find Your App!</h2>
             <h2 class="bottom">This Is YAMA!!</h2>
         </div>
-        <img src="../images/pointing-hand.png" alt="Pointing Hand" class="pointing-hand">
+        <img src="/images/pointing-hand.png" alt="Pointing Hand" class="pointing-hand">
     </section>
 
     <section class="card categories">
@@ -53,7 +53,7 @@
         <a href="#" class="see-all">See All Article &gt;</a>
         <div class="article-grid">
             <a href="#" class="article-card">
-                <img src="../images/cat-icon.png" alt="Cat Icon">
+                <img src="/images/cat-icon.png" alt="Cat Icon">
                 <h4>고양이 키우기</h4>
                 <div class="article-info">
                     <p class="article-author">사용자 닉네임</p>
@@ -61,7 +61,7 @@
                 </div>
             </a>
             <a href="#" class="article-card">
-                <img src="../images/cat-icon.png" alt="Cat Icon">
+                <img src="/images/cat-icon.png" alt="Cat Icon">
                 <h4>고양이 키우기</h4>
                 <div class="article-info">
                     <p class="article-author">사용자 닉네임</p>
@@ -69,7 +69,7 @@
                 </div>
             </a>
             <a href="#" class="article-card">
-                <img src="../images/cat-icon.png" alt="Cat Icon">
+                <img src="/images/cat-icon.png" alt="Cat Icon">
                 <h4>고양이 키우기</h4>
                 <div class="article-info">
                     <p class="article-author">사용자 닉네임</p>
@@ -77,7 +77,7 @@
                 </div>
             </a>
             <a href="#" class="article-card">
-                <img src="../images/cat-icon.png" alt="Cat Icon">
+                <img src="/images/cat-icon.png" alt="Cat Icon">
                 <h4>고양이 키우기</h4>
                 <div class="article-info">
                     <p class="article-author">사용자 닉네임</p>
@@ -85,7 +85,7 @@
                 </div>
             </a>
             <a href="#" class="article-card">
-                <img src="../images/cat-icon.png" alt="Cat Icon">
+                <img src="/images/cat-icon.png" alt="Cat Icon">
                 <h4>고양이 키우기</h4>
                 <div class="article-info">
                     <p class="article-author">사용자 닉네임</p>
@@ -101,7 +101,7 @@
 <footer>
     <div class="footer-container">
         <div class="footer-logo">
-            <img src="../images/yama_logo.png" alt="YAMA Logo">
+            <img src="/images/yama_logo.png" alt="YAMA Logo">
         </div>
         <div class="footer-info">
             <div class="footer-contact">
