--- a/Spring-Project/src/main/resources/templates/signin.html
+++ b/Spring-Project/src/main/resources/templates/signin.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="ko">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YAMA - Your App? My App!</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/signinstyles.css">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
+    <link rel="stylesheet" th:href="@{/css/footer.css}">
+    <link rel="stylesheet" th:href="@{/css/header.css}">
+    <link rel="stylesheet" th:href="@{/css/signinstyles.css}">
 </head>
 <body>
 <header>
     <div class="header-container">
         <div class="logo">
-            <img src="../images/yama_logo.png" alt="YAMA Logo">
+            <img src="/images/yama_logo.png" alt="YAMA Logo">
         </div>
         <nav>
             <ul>
@@ -28,7 +29,7 @@
 <main>
     <main>
         <a href="#" class="go-back">Go To Back</a>
-        <div class="login_icon"><img src="../images/login_icon.png"/></div>
+        <div class="login_icon"><img src="/images/login_icon.png"/></div>
 
 
         <div class="signin-container">
@@ -39,14 +40,14 @@
             <form>
                 <div class="input-group">
                     <div class="mail-icon">
-                        <i class="mail-icon"></i><img src="../images/mail_icon.png"/>
+                        <i class="mail-icon"></i><img src="/images/mail_icon.png"/>
                     </div>
                     <i class="fas fa-envelope"></i>
                     <input type="email" placeholder="email" required>
                 </div>
                 <div class="input-group">
                     <div class="password-icon">
-                        <i class="password-icon"></i><img src="../images/password_icon.png"/>
+                        <i class="password-icon"></i><img src="/images/password_icon.png"/>
                     </div>
                     <i class="fas fa-lock"></i>
                     <input type="password" placeholder="password" required>
@@ -60,7 +61,7 @@
 <footer>
     <div class="footer-container">
         <div class="footer-logo">
-            <img src="../images/yama_logo.png" alt="YAMA Logo">
+            <img src="/images/yama_logo.png" alt="YAMA Logo">
         </div>
         <div class="footer-info">
             <div class="footer-contact">
