--- a/Spring-Project/src/main/resources/templates/signin.html
+++ b/Spring-Project/src/main/resources/templates/signin.html
@@ -37,7 +37,7 @@
                 <i class="fas fa-user-circle"></i>
             </div>
             <h2>Sign In</h2>
-            <form>
+            <form th:action="@{/v1/login}" method="post">
                 <div class="input-group">
                     <div class="mail-icon">
                         <i class="mail-icon"></i><img src="/images/mail_icon.png"/>
