--- a/Spring-Project/src/main/resources/templates/main.html
+++ b/Spring-Project/src/main/resources/templates/main.html
@@ -18,7 +18,8 @@
             <ul>
                 <li><a href="#">Admin</a></li>
                 <li><a href="#">Sign Up</a></li>
-                <li><a href="#">Log In</a></li>
+                <li th:if="${userDTO == null}"><a th:href="@{/v1/login}">Log In</a></li>
+                <li th:if="${userDTO != null}"><a th:href="@{/v1/logout}">Log Out</a></li>
             </ul>
         </nav>
     </div>
