--- a/Spring-Project/src/main/resources/templates/signin.html
+++ b/Spring-Project/src/main/resources/templates/signin.html
@@ -43,14 +43,14 @@
                         <i class="mail-icon"></i><img src="/images/mail_icon.png"/>
                     </div>
                     <i class="fas fa-envelope"></i>
-                    <input type="email" placeholder="email" required>
+                    <input th:field="${userDTO.email}" type="email" placeholder="email" required>
                 </div>
                 <div class="input-group">
                     <div class="password-icon">
                         <i class="password-icon"></i><img src="/images/password_icon.png"/>
                     </div>
                     <i class="fas fa-lock"></i>
-                    <input type="password" placeholder="password" required>
+                    <input th:field="${userDTO.password}" type="password" placeholder="password" required>
                 </div>
                 <button type="submit" class="signin-btn">Log In</button>
             </form>
