--- a/Spring-Project/src/main/resources/templates/main.html
+++ b/Spring-Project/src/main/resources/templates/main.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/main.css}">
     <link rel="stylesheet" th:href="@{/css/footer.css}">
     <link rel="stylesheet" th:href="@{/css/header.css}">
+    <script th:src="@{/js/main.js}"></script>
 </head>
 <body>
 <header>
@@ -17,9 +18,9 @@
         <nav>
             <ul>
                 <li><a href="#">Admin</a></li>
-                <li><a href="#">Sign Up</a></li>
+                <li><a th:href="@{/v1/signup}">Sign Up</a></li>
                 <li th:if="${userDTO == null}"><a th:href="@{/v1/login}">Log In</a></li>
-                <li th:if="${userDTO != null}"><a th:href="@{/v1/logout}">Log Out</a></li>
+                <li th:if="${userDTO != null}"><a th:href="@{/v1/logout}" onclick="logoutMessage()">Log Out</a></li>
             </ul>
         </nav>
     </div>
