fix: 메인 페이지, 로그인 페이지, 회원가입 페이지 버튼 수정 [세부사항] - 메인 페이지: 로그인한 User의 권한이 일반이면 My Page버튼 활성화, 관리자면 Admin 버튼 활성화하도록 변경 - 로그인 페이지: signup버튼과 login버튼만 활성화 및 signup 버튼을 눌렀을 때 회원가입 페이지로 이동 - 회원가입 페이지: signup버튼과 login버튼만 활성화 및 login 버튼을 눌렀을 때 로그인 페이지로 이동 Issue: #13

--- a/Spring-Project/src/main/resources/templates/main.html
+++ b/Spring-Project/src/main/resources/templates/main.html
@@ -17,8 +17,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Admin</a></li>
-                <li><a th:href="@{/v1/signup}">Sign Up</a></li>
+                <li th:if="${userDTO != null and userDTO.getAuthority().name() != 'BANNED'}">
+                    <a th:if="${userDTO.getAuthority().name() == 'USER'}" th:href="@{/v1/user/{id}(id=${userDTO.getId()})}">My Page</a>
+                    <a th:if="${userDTO.getAuthority().name() == 'ADMIN'}" th:href="@{/v1/admin}">Admin</a>
+                </li>
+                <li><a th:if="${userDTO == null}" th:href="@{/v1/signup}">Sign Up</a></li>
                 <li th:if="${userDTO == null}"><a th:href="@{/v1/login}">Log In</a></li>
                 <li th:if="${userDTO != null}"><a th:href="@{/v1/logout}" onclick="logoutMessage()">Log Out</a></li>
             </ul>
