--- a/Spring-Project/src/main/resources/templates/signin.html
+++ b/Spring-Project/src/main/resources/templates/signin.html
@@ -18,9 +18,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Admin</a></li>
-                <li><a href="#">Sign Up</a></li>
-                <li><a href="#">Log In</a></li>
+                <li><a th:href="@{/v1/signup}">Sign Up</a></li>
+                <li><a href="">Log In</a></li>
             </ul>
         </nav>
     </div>
