feat: 상세보기 화면 구현에 따른 viewPost.html 수정
thymeleaf 변수 설정 후 수정

Issue: #19

--- a/Spring-Project/src/main/resources/templates/viewPost.html
+++ b/Spring-Project/src/main/resources/templates/viewPost.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" th:href="@{/css/viewPost.css}">
@@ -24,10 +24,10 @@
 </header>
 <main>
     <div class="back-button-container">
-        <button class="back-button">Go To Back</button>
+        <button th:onclick="|location.href='@{/v1/posts}'|" class="back-button">Go To Back</button>
     </div>
     <section class="post-container">
-        <h1>Title입니다</h1>
+        <h1 th:text="${board.getTitle()}"></h1>
         <div class="icon">
             <img class="icon-img" src="/images/img-place-holder.png">
             <button class="icon-img-add-button">Edit Post</button>
@@ -36,19 +36,19 @@
             <div>
                 <div class="user">
                     <img class="nickname-img" src="/images/nickname-icon.png">
-                    <div class="nickname">Nickname</div>
+                    <div class="nickname" th:text="${board.authorName}">Nickname</div>
                 </div>
-                <div>날짜 출력dsafdsafdsafdsafdasfdasfdasfasdfdasfdsafdsafdasfdsaf</div>
+                <div th:text="${board.createdAt}"></div>
             </div>
 
-            <div class="download">
+            <div class="download" th:if="${board.application != null}">
                 <img class="download-img" src="/images/link.png">
-                <a href="www.naver.com">dfafsdafdasfdsafdasdfdasdafadsfasfdasfdsafdasfdsafdsfasfsdafdsafasfasfdasf</a>
+                <a href="${board.application}" th:text="${board.application}">애플리케이션 링크</a>
             </div>
 
         </div>
         <form class="input">
-            <textarea placeholder="사용해 본 Application에 대한 후기를 남겨주세요!"></textarea>
+            <textarea th:utext="${board.content}" placeholder="사용해 본 Application에 대한 후기를 남겨주세요!"></textarea>
         </form>
         <div class="comment-container">
             <div class="author-createdAt-delete-update-container">
