--- a/Spring-Project/src/main/resources/templates/mypage.html
+++ b/Spring-Project/src/main/resources/templates/mypage.html
@@ -65,8 +65,12 @@
             </div>
             <div class="button-group">
                 <button type="submit" class="modify-btn">Modify</button>
-                <button type="button" class="delete-btn">Delete Account</button>
+<!--                <button type="button" class="delete-btn">Delete Account</button>-->
             </div>
+        </form>
+        <form th:action="@{/v1/user/{id}(id=${userDTO.getId()})}" method="post">
+            <input type="hidden" name="_method" value="delete">
+            <button type="submit" class="delete-btn">Delete Account</button>
         </form>
     </div>
 </main>
