--- a/Spring-Project/src/main/resources/templates/mypage.html
+++ b/Spring-Project/src/main/resources/templates/mypage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/footer.css}">
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/mypagestyles.css}">
+    <script th:src="@{/js/main.js}"></script>
 </head>
 <body>
 <header>
@@ -17,9 +18,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Admin</a></li>
-                <li><a href="#">Sign Up</a></li>
-                <li><a href="#">Log In</a></li>
+                <li><a th:href="@{/v1/logout}" onclick="logoutMessage()">Log Out</a></li>
             </ul>
         </nav>
     </div>
