--- a/Spring-Project/src/main/resources/templates/admin.html
+++ b/Spring-Project/src/main/resources/templates/admin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Admin</title>
@@ -39,6 +39,7 @@
                 <th>이메일</th>
                 <th>닉네임</th>
                 <th>권한</th>
+                <th>권한 변경</th>
             </tr>
             </thead>
             <tbody>
@@ -47,6 +48,14 @@
                 <td th:text="${user.getEmail()}"></td>
                 <td th:text="${user.getNickname()}"></td>
                 <td th:text="${user.getAuthority()}"></td>
+                <td>
+                    <form th:action="@{/v1/admin/{id}(id=${user.getId()})}" method="post">
+                        <input type="hidden" name="_method" value="put">
+                        <input type="hidden" name="id" th:value="${user.id}">
+                        <button type="submit" th:if="${user.getAuthority().name() == 'USER'}">BAN</button>
+                        <button type="submit" th:if="${user.getAuthority().name() == 'BANNED'}">ACTIVE</button>
+                    </form>
+                </td>
             </tr>
             </tbody>
         </table>
