--- a/Spring-Project/src/main/resources/templates/editPost.html
+++ b/Spring-Project/src/main/resources/templates/editPost.html
@@ -31,22 +31,23 @@
             <img class="icon-img" src="/images/img-place-holder.png">
             <button class="icon-img-add-button">Edit Icon</button>
         </div>
-        <form class="input">
-            <input class="input-title input-img" type="text" placeholder="Input your [title]">
-            <input class="input-link input-img" type="text" placeholder="Input your [application download link]">
-            <select class="input-tag-select">
-                <option value="" selected>-- 선택 --</option>
-                <option value="Docs">Docs</option>
-                <option value="Financial">Financial</option>
-                <option value="Lifestyle">Lifestyle</option>
-                <option value="Fitness">Fitness</option>
-                <option value="Music">Music</option>
+        <form th:action="@{/v1/posts/{id}/edit(id=${board.id})}" class="input" method="post">
+            <input type="hidden" name="_method" value="put"/>
+            <input name="title" class="input-title input-img" type="text" placeholder="Input your [title]" th:value="${board.title}">
+            <input name="application" class="input-link input-img" type="text" placeholder="Input your [application download link]" th:value="${board.application}">
+            <select name="categoryId" class="input-tag-select">
+                <option th:each="category : ${categories}"
+                         th:value="${category.id}"
+                         th:text="${category.name}"
+                         th:selected="${category.id == board.categoryId}">
+            </option>
             </select>
-            <textarea placeholder="사용해 본 Application에 대한 후기를 남겨주세요!"></textarea>
+            <textarea name="content" placeholder="사용해 본 Application에 대한 후기를 남겨주세요!" th:text="${board.content}"></textarea>
+            <div class="back-button-container">
+                <button class="back-button" type="submit">Edit</button>
+            </div>
         </form>
-        <div class="back-button-container">
-            <button class="back-button">Edit</button>
-        </div>
+
     </section>
 </main>
 <footer>
