--- a/Spring-Project/src/main/resources/static/css/viewPost.css
+++ b/Spring-Project/src/main/resources/static/css/viewPost.css
@@ -8,6 +8,17 @@ main {
     margin-right: 150px;
 }
 
+.go-back {
+    align-self: flex-start;
+    background-color: #CD31AB;
+    color: white;
+    padding: 5px 15px;
+    border-radius: 20px;
+    text-decoration: none;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
 form {
     display: flex;
     flex-wrap: wrap;
@@ -47,7 +58,6 @@ input:focus {
 }
 
 .back-button {
-
     font-size: 16px;
     border-radius: 32px;
     padding: 8px 16px 8px 16px;
