--- a/Spring-Project/src/main/resources/templates/viewPost.html
+++ b/Spring-Project/src/main/resources/templates/viewPost.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<script src="path/to/comment.js"></script>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,69 +16,71 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Admin</a></li>
                 <li><a href="#">Sign Up</a></li>
-                <li><a href="#">Log In</a></li>
+                <li><a th:href="@{/v1/login}">Log In</a></li>
             </ul>
         </nav>
     </div>
 </header>
-<main>
-    <div class="back-button-container">
-        <button class="back-button">Go To Back</button>
-    </div>
+
+<main role="main">
+    <a href="#" class="go-back">Go To Back</a>
+
     <section class="post-container">
         <h1>Title입니다</h1>
+
         <div class="icon">
-            <img class="icon-img" src="/images/img-place-holder.png">
-            <button class="icon-img-add-button">Edit Post</button>
+            <img src="/images/img-place-holder.png" class="icon-img" alt="">
+            Edit Post
         </div>
+
         <div class="user-information">
             <div>
                 <div class="user">
-                    <img class="nickname-img" src="/images/nickname-icon.png">
-                    <div class="nickname">Nickname</div>
+                    <img src="/images/nickname-icon.png" class="nickname-img" alt="">
+                    <div class="nickname">
+                        Nickname
+                    </div>
                 </div>
-                <div>날짜 출력dsafdsafdsafdsafdasfdasfdasfasdfdasfdsafdsafdasfdsaf</div>
             </div>
-
-            <div class="download">
-                <img class="download-img" src="/images/link.png">
-                <a href="www.naver.com">dfafsdafdasfdsafdasdfdasdafadsfasfdasfdsafdasfdsafdsfasfsdafdsafasfasfdasf</a>
-            </div>
-
-        </div>
-        <form class="input">
-            <textarea placeholder="사용해 본 Application에 대한 후기를 남겨주세요!"></textarea>
-        </form>
-        <div class="comment-container">
-            <div class="author-createdAt-delete-update-container">
-
-                <div class="author-createdAt-container">
-                    <p class="author">최의현</p>
-                    <p class="createdAt">2024-07-23</p>
-                </div>
-
-                <div class="delete-update-container">
-                    <p class="update">수정</p>
-                    <p class="delete">삭제</p>
-                </div>
-
-            </div>
-
-            <div class="content-container">
-                <p>안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.</p>
+            <div>
+                날짜출력
             </div>
         </div>
+
+        <div class="download">
+            <img src="/images/link.png" class="download-img" alt="">
+            <a href="www.naver.com">dfafsdafdasfdsafdasdfdasdafadsfasfdasfdsafdasfdsafdsfasfsdafdsafasfasfdasf</a>
+        </div>
+
+        <div id="comments-container">
+            <div class="comment-container">
+                <div class="author-createdAt-delete-update-container">
+                    <div class="author-createdAt-container">
+                        <span class="author">작성자</span>
+                        <span class="createdAt">2024-07-23</span>
+                    </div>
+                    <div class="delete-update-container">
+                        <span onclick="editComment(0)">수정</span>
+                        <span class="delete" onclick="deleteComment(0)">삭제</span>
+                    </div>
+                </div>
+                <div class="content-container">
+                    <p>Test</p>
+                </div>
+            </div>
+        </div>
+
         <div class="comment-write">
-            댓글 작성
-            <textarea></textarea>
+            <textarea id="newCommentContent" placeholder="댓글을 입력하세요"></textarea>
         </div>
+
         <div class="back-button-container">
-            <button class="back-button">Comment</button>
+            <button class="back-button" onclick="addComment()">Comment</button>
         </div>
     </section>
 </main>
+
 <footer>
     <div class="footer-container">
         <div class="footer-logo">
