--- a/Spring-Project/src/main/resources/static/css/admin.css
+++ b/Spring-Project/src/main/resources/static/css/admin.css
@@ -27,6 +27,7 @@ main {
     background-color: #CD31AB;
     color: white;
 
+    text-decoration: none;
 }
 
 .AdminManagement-title {
@@ -51,4 +52,12 @@ th {
     background-color: #f2f2f2;
     font-weight: bold;
     text-align: center;
+}
+
+tbody td:nth-child(4) {
+    width: 220px;
+}
+
+tbody td:nth-child(5) {
+    width: 260px;
 }
