--- a/Spring-Project/src/main/resources/static/css/signupstyles.css
+++ b/Spring-Project/src/main/resources/static/css/signupstyles.css
@@ -26,17 +26,6 @@ main {
     padding: 20px;
 }
 
-.go-back {
-    align-self: flex-start;
-    background-color: #CD31AB;
-    color: white;
-    padding: 5px 15px;
-    border-radius: 20px;
-    text-decoration: none;
-    font-size: 14px;
-    margin-bottom: 20px;
-}
-
 .login_icon {
     text-align: center;
     margin-bottom: 20px;
@@ -75,11 +64,11 @@ h2 {
     border: none;
     border-bottom: 1px solid #ddd;
     box-sizing: border-box;
-    text-align: center; /* 입력칸 문구 가운데 정렬 */
+    text-align: center;
 }
 
 .signup-container input::placeholder {
-    text-align: center; /* 플레이스홀더 텍스트도 가운데 정렬 */
+    text-align: center;
 }
 
 .signup-btn {
