--- a/Spring-Project/src/main/resources/templates/mypage.html
+++ b/Spring-Project/src/main/resources/templates/mypage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/footer.css}">
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/mypagestyles.css}">
+    <link rel="stylesheet" th:href="@{/css/common.css}">
     <script th:src="@{/js/main.js}"></script>
 </head>
 <body>
@@ -18,6 +19,7 @@
         </div>
         <nav>
             <ul>
+                <li><a href="">My Page</a></li>
                 <li><a th:href="@{/v1/logout}" onclick="logoutMessage()">Log Out</a></li>
             </ul>
         </nav>
@@ -25,7 +27,7 @@
 </header>
 
 <main>
-    <a href="#" class="go-back">Go To Back</a>
+    <a th:href="@{/v1/main}" class="back-button">Go To Back</a>
     <div class="login_icon"><img src="/images/login_icon.png"/></div>
 
     <div class="signup-container">
