--- a/Spring-Project/src/main/resources/templates/signin.html
+++ b/Spring-Project/src/main/resources/templates/signin.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" th:href="@{/css/footer.css}">
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/signinstyles.css}">
+    <link rel="stylesheet" th:href="@{/css/common.css}">
 </head>
 <body>
 <header>
@@ -26,35 +27,33 @@
 </header>
 
 <main>
-    <main>
-        <a href="#" class="go-back">Go To Back</a>
-        <div class="login_icon"><img src="/images/login_icon.png"/></div>
+    <a th:href="@{/v1/main}" class="back-button">Go To Back</a>
+    <div class="login_icon"><img src="/images/login_icon.png"/></div>
 
 
-        <div class="signin-container">
-            <div class="user-icon">
-                <i class="fas fa-user-circle"></i>
-            </div>
-            <h2>Sign In</h2>
-            <form th:action="@{/v1/login}" method="post">
-                <div class="input-group">
-                    <div class="mail-icon">
-                        <i class="mail-icon"></i><img src="/images/mail_icon.png"/>
-                    </div>
-                    <i class="fas fa-envelope"></i>
-                    <input th:field="${userDTO.email}" type="email" placeholder="email" required>
-                </div>
-                <div class="input-group">
-                    <div class="password-icon">
-                        <i class="password-icon"></i><img src="/images/password_icon.png"/>
-                    </div>
-                    <i class="fas fa-lock"></i>
-                    <input th:field="${userDTO.password}" type="password" placeholder="password" required>
-                </div>
-                <button type="submit" class="signin-btn">Log In</button>
-            </form>
+    <div class="signin-container">
+        <div class="user-icon">
+            <i class="fas fa-user-circle"></i>
         </div>
-    </main>
+        <h2>Sign In</h2>
+        <form th:action="@{/v1/login}" method="post">
+            <div class="input-group">
+                <div class="mail-icon">
+                    <i class="mail-icon"></i><img src="/images/mail_icon.png"/>
+                </div>
+                <i class="fas fa-envelope"></i>
+                <input th:field="${userDTO.email}" type="email" placeholder="email" required>
+            </div>
+            <div class="input-group">
+                <div class="password-icon">
+                    <i class="password-icon"></i><img src="/images/password_icon.png"/>
+                </div>
+                <i class="fas fa-lock"></i>
+                <input th:field="${userDTO.password}" type="password" placeholder="password" required>
+            </div>
+            <button type="submit" class="signin-btn">Log In</button>
+        </form>
+    </div>
 </main>
 
 <footer>
