--- a/Spring-Project/src/main/resources/templates/viewPost.html
+++ b/Spring-Project/src/main/resources/templates/viewPost.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" th:href="@{/css/viewPost.css}">
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/footer.css}">
+    <link rel="stylesheet" th:href="@{/css/common.css}">
     <title>Your App? My App! YAMA - 게시글 작성</title>
 </head>
 <body>
@@ -24,7 +25,7 @@
 </header>
 <main>
     <div class="back-button-container">
-        <button class="back-button">Go To Back</button>
+        <a th:href="@{/v1/main}" class="back-button">Go To Back</a>
     </div>
     <section class="post-container">
         <h1>Title입니다</h1>
