--- a/Spring-Project/src/main/resources/templates/main.html
+++ b/Spring-Project/src/main/resources/templates/main.html
@@ -104,29 +104,6 @@
     </section>
 </main>
 
-<footer>
-    <div class="footer-container">
-        <div class="footer-logo">
-            <img src="/images/yama_logo.png" alt="YAMA Logo">
-        </div>
-        <div class="footer-info">
-            <div class="footer-contact">
-                <h4>Contact</h4>
-                <ul>
-                    <li><p>010-XXXX-XXXX</p></li>
-                    <li><p>Eh9700@Naver.Com</p></li>
-                </ul>
-            </div>
-            <div class="footer-about">
-                <h4>ABOUT</h4>
-                <ul>
-                    <li><a href="#">About Team</a></li>
-                    <li><a href="#">ERD</a></li>
-                    <li><a href="#">GitHub</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</footer>
+<footer th:replace="~{footer :: footer}"></footer>
 </body>
 </html>
