fix: 마이페이지의 네비게이션 링크에 마이페이지 버튼 나오게 수정
Issue: #20

--- a/Spring-Project/src/main/resources/templates/main.html
+++ b/Spring-Project/src/main/resources/templates/main.html
@@ -18,8 +18,8 @@
         </div>
         <nav>
             <ul>
-                <li th:if="${userDTO != null and userDTO.getAuthority().name() != 'BANNED'}">
-                    <a th:if="${userDTO.getAuthority().name() == 'USER'}" th:href="@{/v1/user/{id}(id=${userDTO.getId()})}">My Page</a>
+                <li th:if="${userDTO != null}">
+                    <a th:if="${userDTO.getAuthority().name() != 'ADMIN'}" th:href="@{/v1/user/{id}(id=${userDTO.getId()})}">My Page</a>
                     <a th:if="${userDTO.getAuthority().name() == 'ADMIN'}" th:href="@{/v1/admin}">Admin</a>
                 </li>
                 <li th:if="${userDTO == null}"><a th:href="@{/v1/signup}">Sign Up</a></li>
