--- a/Spring-Project/src/main/resources/templates/editPost.html
+++ b/Spring-Project/src/main/resources/templates/editPost.html
@@ -31,7 +31,7 @@
             <img class="icon-img" src="/images/img-place-holder.png">
             <button class="icon-img-add-button">Edit Icon</button>
         </div>
-        <form th:action="@{/v1/posts/{id}/edit(id=${board.id})}" class="input" method="post">
+        <form th:action="${type == 'notice'} ? @{/v1/posts/notice/{id}/edit(id=${board.id})} : @{/v1/posts/post/{id}/edit(id=${board.id})}" th:object="${board}" class="input" method="post">
             <input type="hidden" name="_method" value="put"/>
             <input name="title" class="input-title input-img" type="text" placeholder="Input your [title]" th:value="${board.title}">
             <input name="application" class="input-link input-img" type="text" placeholder="Input your [application download link]" th:value="${board.application}">
@@ -46,11 +46,6 @@
             <div class="back-button-container">
                 <button class="back-button" type="submit">Edit</button>
             </div>
-        </form>
-
-        <form th:action="@{/v1/posts/{id}(id=${board.id})}" method="post">
-            <input type="hidden" name="_method" value="delete"/>
-            <button type="submit" class="delete-button" onclick="return confirm('정말로 이 게시글을 삭제하시겠습니까?')">Delete</button>
         </form>
 
     </section>
