Update submodule content

--- a/Spring-Project/src/main/resources/templates/viewPost.html
+++ b/Spring-Project/src/main/resources/templates/viewPost.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<script th:src="@{/js/comment.js}"></script>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" th:href="@{/css/viewPost.css}">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/footer.css}">
+    <script th:src="@{/js/comment.js}"></script>
     <title>Your App? My App! YAMA - 게시글 작성</title>
 </head>
 <body>
