--- a/Spring-Project/src/main/resources/static/css/viewPost.css
+++ b/Spring-Project/src/main/resources/static/css/viewPost.css
@@ -41,7 +41,7 @@ input {
 
 textarea {
     width: 730px;
-    height: 16x;
+    height: 16px;
     font-size: 20px;
     resize: none;
     margin-top: 25px;
@@ -210,4 +210,39 @@ input:focus {
 
 .comment-write button {
 
+}
+
+.content-container {
+    position: relative;
+    padding-bottom: 40px; /* 버튼 공간 확보 */
+}
+
+.edit-button-container {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+.edit-button {
+    padding: 5px 10px;
+    margin-left: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.save-button {
+    background-color: #074af3;
+    color: white;
+}
+
+.cancel-button {
+    background-color: #f44336;
+    color: white;
+}
+
+.content-container textarea {
+    width: 100%;
+    height: 100px;
+    margin-bottom: 10px;
 }
